--- a/index.html
+++ b/index.html
@@ -2,17 +2,7 @@
 <html>
   <head>
     <title>Tiny USB</title>
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-37673931-2']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
+    <meta http-equiv="refresh" content="0; url = https://docs.tinyusb.org" /> 
   </head>
   <body>
       <div style="background-image: url(bg.png); font-size: 20px; text-align: center; padding: 0 20px 20px 20px; border: 2px dotted black; margin: 30px;">
